# OpenWhisper-Desktop

./: .gitignore  Makefile  main.py  manage.py  pyproject.toml
openwhisper/: asgi.py  routing.py  settings.py  urls.py  ws_auth.py  wsgi.py
openwhisper/apps/api/: serializers.py  urls.py  views.py
openwhisper/apps/chat/: admin.py  apps.py  consumers.py  display.py  friend_social.py  models.py  permissions.py  realtime.py  routing.py  signals.py  tests.py
openwhisper/apps/chat/migrations/: 0001_initial.py  0002_message_related_name_messages.py  0003_remove_message_chat_sender_unique.py  0004_chat_title.py  0005_chat_created_by.py  0006_message_attachment.py
openwhisper/apps/theme/: apps.py  forms.py  urls.py  views.py
openwhisper/apps/theme/static/theme/js/: account_settings.js  chat_app.js
openwhisper/apps/theme/static/theme/js/chat_app/: api.js  dialogs.js  emoji.js
openwhisper/apps/theme/templates/: base.html  base_app.html  base_marketing.html  chat_lab.html  home.html  landing.html  robots.txt
openwhisper/apps/theme/templates/account/: settings.html
openwhisper/apps/theme/templates/app/: chat.html
openwhisper/apps/theme/templates/auth/: login.html  register.html
openwhisper/apps/user/: admin.py  models.py
openwhisper/apps/user/management/commands/: bootstrap_dummy_data.py  bootstrap_superuser.py
openwhisper/apps/user/migrations/: 0001_initial.py  0002_friend_request.py  0003_rename_user_fr_to_user_created_desc_idx_user_friend_to_user_4b2a94_idx_and_more.py
openwhisper/settings/: .env.example  base.py  local.py  tests.py
openwhisper/static/theme/js/: account_settings.js  chat_app.js
openwhisper/user/: admin.py  models.py
